View Issue Details

IDProjectCategoryView StatusLast Update
0025623Open CASCADEOCCT:Shape Healingpublic2016-12-09 16:37
ReporteramlAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.9.0 
Target Version7.1.0Fixed in Version7.1.0 
Summary0025623: Some tests become worse after 22598 fix
Descriptionde iges_2 A9
After fix wires not splitted into several wires, master behaviour seems to be correct.

de iges_2 C6
After fix wrong shape obtained, duplicate of surface is stored in shape res_1. Pcurves after CR22598 fix seems to be correct like in master.

de step_3 E6
New multiple problems detected via reference data.
Steps To Reproducetest de iges_2 A9
TagsNo tags attached.
Test case numberNot needed

Attached Files

  • Input.png (25,574 bytes)
  • Result_Before_22598.png (31,648 bytes)
  • Result_After_22598.png (24,542 bytes)

Activities

aml

2016-05-20 07:53

developer  

Input.png (25,574 bytes)

aml

2016-05-20 07:54

developer  

Result_Before_22598.png (31,648 bytes)

aml

2016-05-20 07:54

developer  

Result_After_22598.png (24,542 bytes)

aml

2016-05-20 07:54

developer   ~0054147

Last edited: 2016-05-20 07:56

Dear msv,
Please check current state of the CR25623 branch.

de iges_2 C6
Fixed by azv fix 0026252

de step_3 E6
Fixed by couple of fixes: 0025553, 0026930, 0024682.

de iges_2 A9
After 22598 new "checkshape" problems are reported.
Image Input.png - contains input face before the shape healing
Image Result_Before_22598.png - contains result: three faces after shape healing (no checkshape).
Image Result_After_22598.png - contains result: one face after shape healing (2 checkshape problems).

Result before 22598 fix hides the problem of non-manifold input geometry. So, checkshape reporting is correct. Face splitting problem is related to incorrect tolerance usage and fixed in scope of the CR25623 branch.

git

2016-05-20 07:55

administrator   ~0054148

Branch CR25623 has been created by aml.

SHA-1: e0708bf9dd37e30a60ab7a664ad30a41164c6ca0


Detailed log of new commits:

Author: aml
Date: Thu May 19 12:54:18 2016 +0300

    0025623: Some tests become worse after 22598 fix
    
    Tolerance of line / line analytical intersection is fixed.
    Test cases are updated to the new behavior.

msv

2016-05-20 10:30

developer   ~0054153

Reviewed.

git

2016-05-20 12:29

administrator   ~0054246

Branch CR25623 has been updated forcibly by apv.

SHA-1: fcea96286fa329095484d3d6afca995e9fdc88ae

apv

2016-05-20 12:29

tester   ~0054247

Branch CR25623 has been rebased on the current master

apv

2016-05-23 14:40

tester   ~0054284

Dear BugMaster,

Branch CR25623 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested.
SHA-1: fcea96286fa329095484d3d6afca995e9fdc88ae

Number of compiler warnings:
occt component:
   Linux: 0 (0 on master)
   Windows: 0 (0 on master)
   MacOS: 0 (0 on master)
products component:
   Linux: 72
   Windows: 4
   MacOS: 1138

Regressions/Differences:
http://occt-tests/CR25623-master-OCCT/Debian70-64/summary.html
http://occt-tests/CR25623-master-OCCT/Windows-64-VC10/summary.html
de iges_2 A9

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 89059816 / 88950050 [+0.12%]
Total CPU difference: 19244.999999999996 / 19256.219999999936 [-0.06%]

Testing on Windows:
Total MEMORY difference: 55686340 / 55732339 [-0.08%]
Total CPU difference: 18693.053826498763 / 18201.85347779892 [+2.70%]

apv

2016-05-23 14:42

tester   ~0054285

Dear aml,

Branch CR25623 has been rejected due to:
- regressions/differences/improvements

aml

2016-05-23 15:05

developer   ~0054293

Dear apv,
difference in test case "de iges_2 A9" is acceptable.
Could you please add corresponding "todo" statement?

git

2016-05-23 15:34

administrator   ~0054295

Branch CR25623 has been updated by apv.

SHA-1: 60bd486eb92e55863398dea8119b8b422f3d2fbf


Detailed log of new commits:

Author: apv
Date: Mon May 23 15:34:20 2016 +0300

    Update of test case according to the current behavior

apv

2016-05-23 15:35

tester   ~0054296

Dear Andrey,

Please validate correction of test cases in branch CR25623

abv

2016-05-24 08:48

manager   ~0054320

I see no problem, please proceed

apv

2016-05-24 10:43

tester   ~0054324

Branch CR25623 is tested

git

2016-05-27 13:09

administrator   ~0054467

Branch CR25623 has been deleted by inv.

SHA-1: 60bd486eb92e55863398dea8119b8b422f3d2fbf

Related Changesets

occt: master 6b52f125

2016-05-19 09:54:18

aml


Committer: bugmaster Details Diff
0025623: Some tests become worse after 22598 fix

Tolerance of line / line analytical intersection is fixed.
Test cases are updated to the new behavior.

Update of test case according to the current behavior
Affected Issues
0025623
mod - src/IntCurve/IntCurve_IntConicConic_1.cxx Diff File
mod - tests/boolean/volumemaker/C4 Diff File
mod - tests/boolean/volumemaker/D2 Diff File
mod - tests/de/iges_1/L8 Diff File
mod - tests/de/iges_2/A9 Diff File
mod - tests/de/iges_2/G1 Diff File

Issue History

Date Modified Username Field Change
2014-12-17 10:15 aml New Issue
2014-12-17 10:15 aml Assigned To => aml
2016-05-20 07:53 aml File Added: Input.png
2016-05-20 07:54 aml File Added: Result_Before_22598.png
2016-05-20 07:54 aml File Added: Result_After_22598.png
2016-05-20 07:54 aml Note Added: 0054147
2016-05-20 07:55 git Note Added: 0054148
2016-05-20 07:55 aml Assigned To aml => msv
2016-05-20 07:55 aml Status new => resolved
2016-05-20 07:55 aml Steps to Reproduce Updated
2016-05-20 07:56 aml Note Edited: 0054147
2016-05-20 10:30 msv Note Added: 0054153
2016-05-20 10:30 msv Assigned To msv => bugmaster
2016-05-20 10:30 msv Status resolved => reviewed
2016-05-20 11:27 apv Assigned To bugmaster => apv
2016-05-20 12:29 git Note Added: 0054246
2016-05-20 12:29 apv Note Added: 0054247
2016-05-23 14:37 apv Test case number => Not needed
2016-05-23 14:40 apv Note Added: 0054284
2016-05-23 14:40 apv Assigned To apv => aml
2016-05-23 14:40 apv Status reviewed => assigned
2016-05-23 14:42 apv Note Added: 0054285
2016-05-23 15:05 aml Note Added: 0054293
2016-05-23 15:05 aml Assigned To aml => apv
2016-05-23 15:05 aml Status assigned => feedback
2016-05-23 15:34 git Note Added: 0054295
2016-05-23 15:35 apv Assigned To apv => abv
2016-05-23 15:35 apv Note Added: 0054296
2016-05-24 08:48 abv Note Added: 0054320
2016-05-24 08:48 abv Assigned To abv => apv
2016-05-24 10:43 apv Note Added: 0054324
2016-05-24 10:43 apv Assigned To apv => bugmaster
2016-05-24 10:43 apv Status feedback => tested
2016-05-27 13:02 bugmaster Changeset attached => occt master 6b52f125
2016-05-27 13:02 bugmaster Status tested => verified
2016-05-27 13:02 bugmaster Resolution open => fixed
2016-05-27 13:09 git Note Added: 0054467
2016-05-30 11:50 bugmaster Target Version => 7.1.0
2016-12-09 16:31 aiv Status verified => closed
2016-12-09 16:37 aiv Fixed in Version => 7.1.0